--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@fontsource/ibm-plex-sans": "^4.3.0",
     "@fontsource/inter": "^4.3.0",
+    "@mailchimp/mailchimp_marketing": "^3.0.43",
     "aos": "^3.0.0-beta.6",
     "dotenv": "^8.2.0",
     "dotenv-load": "^2.0.0",
