--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev -p 5000",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "serve": "next start",
     "export": "next export"
   },
