--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^2.7.5",
     "globby": "^11.0.0",
     "isomorphic-unfetch": "^3.0.0",
+    "mixpanel-browser": "^2.41.0",
     "next": "9.5.3",
     "next-compose-plugins": "^2.2.0",
     "next-env": "^1.1.1",
