--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "16.13.0",
     "react-ga": "^3.1.2",
+    "react-hook-form": "^7.8.1",
     "react-icons": "^3.10.0",
     "react-modal-video": "^1.2.6",
     "react-multi-carousel": "^2.5.5",
