--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fontsource/inter": "^4.3.0",
     "@mailchimp/mailchimp_marketing": "^3.0.43",
     "@next/env": "^10.2.3",
+    "@sendgrid/client": "^7.4.3",
     "@sendgrid/mail": "^7.4.4",
     "aos": "^3.0.0-beta.6",
     "dotenv": "^8.2.0",
